# covenant-hedge-fund

./: .env.example  .gitignore  CLAUDE.md  COMPLIANCE.md  LICENSE  README.md  ab_backtest.py  app.py  demo.py  demo.sh  pyproject.toml
docs/: app.html  index.html
registry/: agent-registry.json  orientation.json  tribes.json
reports/: llm-lite-backtest-2026-07-11.md
samples/: backtest-output.txt  single-shot-output.txt
skills/: crypto-onchain.md  dcf-wacc.md  earnings-analysis.md  macro-regime.md
src/: backtest.py  event_study.py  event_study_report.py  evidence.py  export.py  llm.py  main.py  models.py  portfolio.py  report.py  risk.py  skills.py  snapshot.py
src/agents/: base.py  crypto.py  macro.py  parallel.py  quant.py  value.py
src/data/: __init__.py  api.py  crypto.py  defillama.py  fields.py
